fix: perbaiki cards gap pada panel

--- a/resources/css/filament/core/theme.css
+++ b/resources/css/filament/core/theme.css
@@ -851,7 +851,7 @@ html {
 
 /* CARDS */
 .cards {
-    @apply grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-2 justify-start px-0 py-2;
+    @apply grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 !gap-2 justify-start px-0 py-2;
 }
 .card {
     @apply flex flex-col gap-4 p-2 bg-white shadow-none overflow-hidden select-none cursor-default border border-gray-200 justify-between;
